Early support for sending from contacts list.

--- a/MailgunServer/Info.plist
+++ b/MailgunServer/Info.plist
@@ -19,9 +19,11 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>26</string>
+	<string>27</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSContactsUsageDescription</key>
+	<string>Used to access contact email addresses.</string>
 	<key>HistMessage</key>
 	<dict/>
 	<key>UILaunchStoryboardName</key>
